--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
+:root {
+  --bg-color : rgb(34, 34, 34);
+  --default-font-color : #e4e4e4;
+  --google-blue : #4285F4;
+  --google-red : #DB4437;
+  --google-yellow : #F4B400;
+  --google-green : #0F9D58;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: var(--bg-color);
+  color: var(--default-font-color);
 }
