--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,207 @@
 :root {
-  --bg-color : rgb(34, 34, 34);
-  --default-font-color : #e4e4e4;
   --google-blue : #4285F4;
   --google-red : #DB4437;
   --google-yellow : #F4B400;
   --google-green : #0F9D58;
 }
 
+.light-theme {
+  --bg-color : #e4e4e4;
+  --default-font-color : #000;
+  --link-color : #2a2525;
+  --dsc-logo-red : #DB4437;
+  --dsc-logo-blue : #4285F4;
+  --dsc-logo-yellow : #F4B400;
+  --dsc-logo-green : #0F9D58;
+
+  --hero-bg : #a8190c;
+  --lead-bg : #256de0;
+}
+
+.dark-theme {
+  --bg-color : #222222;
+  --default-font-color : #e4e4e4;
+  --link-color : #a4a4a4;
+  --dsc-logo-red : #fff;
+  --dsc-logo-blue : #fff;
+  --dsc-logo-yellow : #fff;
+  --dsc-logo-green : #fff;
+
+  --hero-bg : #222;
+  --lead-bg : #131313;
+
+}
+
 .App {
   min-height: 100vh;
   background-color: var(--bg-color);
   color: var(--default-font-color);
+  transition: all 0.5s ease-in-out;
+}
+
+/* HEADER */
+
+.Logo_logoRedPart__QJGXu {
+  fill: var(--dsc-logo-red);
+  transition: all 0.5s ease-in-out;
+}
+
+.Logo_logoGreenPart__LnIju {
+  fill: var(--dsc-logo-green);
+  transition: all 0.5s ease-in-out;
+}
+
+.Logo_logoYellowPart__AVkWI {
+  fill: var(--dsc-logo-yellow);
+  transition: all 0.5s ease-in-out;
+}
+
+.Logo_logoBluePart__Gg0LP {
+  fill: var(--dsc-logo-blue);
+  transition: all 0.5s ease-in-out;
+}
+
+header {
+  background-color: var(--bg-color);
+  transition: all 0.5s ease-in-out;
+  z-index: 999;
+}
+
+
+header nav ul li {
+  margin: 0.8rem;
+}
+
+header nav ul {
+  color: var(--link-color);
+}
+
+header nav ul li:hover {
+  color: var(--default-font-color);
+}
+
+.menu-button-container {
+  display: block;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  position: absolute;
+  background-color: var(--default-font-color);
+  height: 3px;
+  width: 24px;
+  border-radius: 3px;
+  transition: all 0.5s ease-in-out;
+}
+
+.menu-button::before {
+  content: '';
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: '';
+  margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(45deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-45deg);
+}
+
+
+@media screen and (max-width : 768px) {
+  .nav-opt {
+    position: absolute;
+    top: 100%;
+    transition: all 0.5s ease-in-out;
+    z-index: 999;
+    background-color: var(--bg-color);
+  }
+
+  header nav ul {
+    color: var(--default-font-color);
+  }
+
+  header nav ul li button {
+    display: none;
+  }
+}
+
+/* HOMEPAGE */
+/* HERO */
+
+.Hero {
+  height: 80vh;
+  background-color: var(--hero-bg);
+  color: #fff;
+}
+
+.Hero .logo-text {
+  font-size: 1.3rem;
+}
+
+.hero-wave {
+  fill: var(--hero-bg);
+}
+
+@media screen and (max-width : 768px) {
+  .Hero {
+    height: 90vh;
+  }
+
+  .Hero .logo-img {
+    margin: 1rem;
+    height: fit-content;
+  }
+}
+
+/* LEAD SECTION */
+.Lead {
+  background-color: var(--lead-bg);
+  color: #fff;
+}
+
+.lead-img {
+  border: 2px solid black;
+  width: 50%;
+  aspect-ratio: 3/4;
+}
+
+.lead-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.lead-wave {
+  fill: var(--lead-bg);
+}
+
+@media screen and (max-width : 768px) {
+  .lead-info {
+    text-align: center;
+  }
 }
