--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
   --google-blue : #4285F4;
   --google-red : #DB4437;
-  --google-yellow : #F4B400;
+  --google-yellow :   ;
   --google-green : #0F9D58;
 }
 
