--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  transition: all 0.3s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
 :root {
@@ -240,12 +240,12 @@ header nav ul li:hover {
   background-color: var(--card-bg);
 }
 
-.Team .member-img {
+.member-img {
   max-height: 8rem;
   aspect-ratio: 1/1;
 }
 
-.Team .member-img img {
+.member-img img {
   height: 100%;
   width: 100%;
   object-fit: cover;
