--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-* {
-  transition: all 0.1s ease-in-out;
-}
-
 :root {
   --google-blue : #4285F4;
   --google-red : #DB4437;
@@ -18,12 +14,14 @@
   --dsc-logo-yellow : #F4B400;
   --dsc-logo-green : #0F9D58;
 
-  --hero-bg : #a8190c;
+  --hero-bg : #e4e4e4;
+  --hero-blur : #00000083;
+  --about-bg : #d03a2c;
   --lead-bg : #256de0;
   --events-bg : #fcba04;
   --contact-bg : #0c8e4f;
   --card-bg : #afb5cd;
-
+  
   --accordian-bg : #a2acd7;
 }
 
@@ -35,8 +33,10 @@
   --dsc-logo-blue : #fff;
   --dsc-logo-yellow : #fff;
   --dsc-logo-green : #fff;
-
-  --hero-bg : #222;
+  
+  --hero-bg : #131313;
+  --hero-blur : #00000083;
+  --about-bg : #222;
   --lead-bg : #131313;
   --events-bg : #222;
   --contact-bg : #131313; 
@@ -47,9 +47,12 @@
 
 .App {
   min-height: 100vh;
-  background-color: var(--bg-color);
   color: var(--default-font-color);
   transition: all 0.5s ease-in-out;
+}
+
+.switch {
+  z-index: 999;
 }
 
 /* HEADER */
@@ -75,125 +78,274 @@
 }
 
 header {
-  background-color: var(--bg-color);
-  transition: all 0.5s ease-in-out;
   z-index: 999;
 }
 
+.navB {
+  z-index: 999;
+  --border: 3px;
+  --gap: 5px;
+  --offset: 10px;
+  --_s: var(--offset);
 
-header nav ul li {
-  margin: 0.8rem;
-}
-
-header nav ul {
-  color: var(--link-color);
-}
-
-header nav ul li:hover {
-  color: var(--default-font-color);
-}
-
-.menu-button-container {
-  display: block;
-  height: 100%;
-  width: 30px;
+  border-radius: 50%;
   cursor: pointer;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 5px;
+  border: var(--offset) solid #0000;
+  --_m: radial-gradient(
+    50% 50%,
+    #000 calc(100% - var(--offset)),
+    #0000 calc(100% - var(--border))
+  );
+
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  --_g: #0000 calc(99% - var(--border)),
+    var(--dsc-logo-red) calc(100% - var(--border)) 99%, #0000;
+  --_h: #0000 calc(99% - var(--border)),
+    var(--dsc-logo-blue) calc(100% - var(--border)) 99%, #0000;
+  --_i: #0000 calc(99% - var(--border)),
+    var(--dsc-logo-green) calc(100% - var(--border)) 99%, #0000;
+  --_j: #0000 calc(99% - var(--border)),
+    var(--dsc-logo-yellow) calc(100% - var(--border)) 99%, #0000;
+  --_r: 100% 100% at;
+
+  background: radial-gradient(var(--_r) 0 0, var(--_g)) calc(100% + var(--_s))
+      calc(100% + var(--_s)),
+    radial-gradient(var(--_r) 100% 0, var(--_h)) calc(0% - var(--_s))
+      calc(100% + var(--_s)),
+    radial-gradient(var(--_r) 0 100%, var(--_i)) calc(100% + var(--_s))
+      calc(0% - var(--_s)),
+    radial-gradient(var(--_r) 100% 100%, var(--_j)) calc(0% - var(--_s))
+      calc(0% - var(--_s));
+  background-size: 50% 50%;
+  background-repeat: no-repeat;
+  transition: 0.4s;
 }
 
-#menu-toggle {
+.navB:hover {
+  --_s: 0px;
+}
+
+
+.navB label {
+  display: flex;
+  flex-direction: column;
+  width: 40px;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.navB label span {
+  background: var(--default-font-color);
+  border-radius: 10px;
+  height: 5px;
+  margin: 4px 0;
+  transition: 0.5s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+
+.navB span:nth-of-type(1) {
+  margin-left: auto;
+  width: 50%;
+}
+
+.navB span:nth-of-type(2) {
+  width: 100%;
+}
+
+.navB span:nth-of-type(3) {
+  margin-left: auto;
+  width: 75%;
+}
+
+.navB input[type="checkbox"] {
   display: none;
 }
 
-.menu-button,
-.menu-button::before,
-.menu-button::after {
-  display: block;
-  position: absolute;
-  background-color: var(--default-font-color);
-  height: 3px;
-  width: 24px;
-  border-radius: 3px;
+.navB input[type="checkbox"]:checked ~ span:nth-of-type(1) {
+  transform-origin: bottom;
+  transform: rotatez(-45deg) translate(-7px, 1px);
+}
+
+.navB input[type="checkbox"]:checked ~ span:nth-of-type(2) {
+  transform-origin: top;
+  transform: rotatez(45deg);
+}
+
+.navB input[type="checkbox"]:checked ~ span:nth-of-type(3) {
+  transform-origin: bottom;
+  width: 50%;
+  transform: translate(-17px, -7px) rotatez(-45deg);
+}
+
+#opt1 ul {
+  opacity: 0;
+  transform: translateX(50px);
+  transition: all 0.5s ease-in;
+}
+
+#opt1 ul li:hover{
+  scale: 1.1;
+  transition: all 0.2s ease-in;
+}
+
+#opt1, #opt2 {
+  height: 0;
   transition: all 0.5s ease-in-out;
 }
 
-.menu-button::before {
-  content: '';
-  margin-top: -8px;
-}
-
-.menu-button::after {
-  content: '';
-  margin-top: 8px;
-}
-
-#menu-toggle:checked + .menu-button-container .menu-button::before {
-  margin-top: 0px;
-  transform: rotate(45deg);
-}
-
-#menu-toggle:checked + .menu-button-container .menu-button {
-  background: rgba(255, 255, 255, 0);
-}
-
-#menu-toggle:checked + .menu-button-container .menu-button::after {
-  margin-top: 0px;
-  transform: rotate(-45deg);
-}
-
-
-@media screen and (max-width : 768px) {
-  .nav-opt {
-    position: absolute;
-    top: 100%;
-    transition: all 0.5s ease-in-out;
-    z-index: 999;
-    background-color: var(--bg-color);
-  }
-
-  header nav ul {
-    color: var(--default-font-color);
-  }
-
-  header nav ul li button {
-    display: none;
-  }
-}
 
 /* HOMEPAGE */
 /* HERO */
 
 .Hero {
-  height: 80vh;
-  background-color: var(--hero-bg);
-  color: #fff;
+  height: 100vh;
+  color: var(--default-font-color);
+}
+
+.bg {
+  position: fixed;
+  z-index: -4;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  --dot-bg: var(--hero-bg);
+  --dot-color: var(--default-font-color);
+  --dot-size: 1px;
+  --dot-space: 22px;
+	background:
+		linear-gradient(90deg, var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space),
+		linear-gradient(var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space),
+		var(--dot-color);
+
+  transition: all 0.5s ease-in-out;
+}
+
+.orbit {
+  transform-origin: center;
+  animation: orbit 25s linear infinite 0.5s;
+  right: 70%;
+  z-index: -1;
+}
+
+@media screen and (max-width: 550px) {
+  .orbit {
+    top: -10%;
+    right: 30%;
+  }
+}
+
+.orbit:hover, .orbit:hover > .circle img {
+  animation-play-state: paused;
+}
+
+.circle {
+  position: absolute;
+  left: calc(50% - 25px);
+  top: calc(50% - 25px);
+  height: 80px;
+  width: 80px;
+  background-color: #fff;
+  border: 1px solid #d6d6d65c;
+  border-radius: 50%;
+  z-index: -1;
+}
+
+@media screen and (max-width : 768px) {
+  .circle {
+    height: 60px;
+    width: 60px;
+  }
+}
+
+
+.circle:nth-child(1) {
+  transform: rotate(0deg) translate(180px) rotate(0deg);
+}
+
+.circle:nth-child(2) {
+  transform: rotate(calc(360deg / 6 * 1)) translate(180px) rotate(calc(360deg / 6 * -1));;
+}
+
+.circle:nth-child(3) {
+  transform: rotate(calc(360deg / 6 * 2)) translate(180px) rotate(calc(360deg / 6 * -2));
+}
+
+.circle:nth-child(4) {
+  transform: rotate(calc(360deg / 6 * 3)) translate(180px) rotate(calc(360deg / 6 * -3));
+}
+
+.circle:nth-child(5) {
+  transform: rotate(calc(360deg / 6 * 4)) translate(180px) rotate(calc(360deg / 6 * -4));
+}
+.circle:nth-child(6) {
+  transform: rotate(calc(360deg / 6 * 5)) translate(180px) rotate(calc(360deg / 6 * -5));
+}
+
+
+@keyframes orbit {
+  100% {
+    rotate: 1turn;
+  }
+}
+@keyframes orbit1 {
+  0% {
+    scale: 1;
+  }
+  100% {
+    scale: 1.1;
+  }
+}
+
+.circle img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  animation: orbit 25s linear reverse infinite 0.5s;
+  transition: all 0.5s ease-in-out;
+}
+
+.Hero .logo-img {
+  border-radius: 0.4rem;
+  padding: 0.2rem;
 }
 
 .Hero .logo-text {
   font-size: 1.3rem;
 }
 
-.hero-wave {
-  fill: var(--hero-bg);
-}
-
 @media screen and (max-width : 768px) {
-  .Hero {
-    height: 90vh;
-  }
-
   .Hero .logo-img {
     margin: 1rem;
     height: fit-content;
   }
 }
 
+/* ABOUT SECTION */
+.About {
+  background-color: var(--about-bg);
+  /* background-image: url("./Images/Untitled\ design.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  backdrop-filter: sepia(80%); */
+}
+
+.advisor-card {
+  width: 300px;
+  aspect-ratio: 4/3;
+}
+
+.about-wave {
+  fill: var(--about-bg);
+}
+
 /* LEAD SECTION */
 .Lead {
   background-color: var(--lead-bg);
   color: #fff;
+  z-index: 10;
 }
 
 .lead-img {
