--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@ html {
   scroll-behavior: smooth;
 }
 
-
 :root {
   --google-blue : #4285F4;
   --google-red : #DB4437;
@@ -218,7 +217,8 @@ header {
   color: var(--default-font-color);
 }
 
-.bg {
+/* DOTTED BG  */
+/* .bg {
   position: fixed;
   z-index: -4;
   top: 0;
@@ -235,7 +235,7 @@ header {
 		var(--dot-color);
 
   transition: all 0.5s ease-in-out;
-}
+} */
 
 .blob{
   border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
@@ -279,107 +279,6 @@ header {
   }
 }
 
-.phone {
-  transition: all 0.5s ease-in-out;
-  transform: rotateY(-30deg) rotateX(15deg);
-}
-
-.phone:hover {
-  transform: rotateY(0deg) rotateX(0deg);
-}
-
-.float-phone {
-  transition: all 0.5s ease-in-out;
-}
-
-.float-phone:hover {
-  border-bottom: 2px solid white;
-  border-right: 2px solid white; 
-}
-
-.orbit {
-  transform-origin: center;
-  animation: orbit 25s linear infinite 0.5s;
-  right: 70%;
-  z-index: -1;
-}
-
-@media screen and (max-width: 550px) {
-  .orbit {
-    top: -10%;
-    right: 30%;
-  }
-}
-
-.orbit:hover, .orbit:hover > .circle img {
-  animation-play-state: paused;
-}
-
-.circle {
-  position: absolute;
-  left: calc(50% - 25px);
-  top: calc(50% - 25px);
-  height: 80px;
-  width: 80px;
-  background-color: #fff;
-  border: 1px solid #d6d6d65c;
-  border-radius: 50%;
-  z-index: -1;
-}
-
-@media screen and (max-width : 768px) {
-  .circle {
-    height: 60px;
-    width: 60px;
-  }
-}
-
-
-.circle:nth-child(1) {
-  transform: rotate(0deg) translate(180px) rotate(0deg);
-}
-
-.circle:nth-child(2) {
-  transform: rotate(calc(360deg / 6 * 1)) translate(180px) rotate(calc(360deg / 6 * -1));;
-}
-
-.circle:nth-child(3) {
-  transform: rotate(calc(360deg / 6 * 2)) translate(180px) rotate(calc(360deg / 6 * -2));
-}
-
-.circle:nth-child(4) {
-  transform: rotate(calc(360deg / 6 * 3)) translate(180px) rotate(calc(360deg / 6 * -3));
-}
-
-.circle:nth-child(5) {
-  transform: rotate(calc(360deg / 6 * 4)) translate(180px) rotate(calc(360deg / 6 * -4));
-}
-.circle:nth-child(6) {
-  transform: rotate(calc(360deg / 6 * 5)) translate(180px) rotate(calc(360deg / 6 * -5));
-}
-
-
-@keyframes orbit {
-  100% {
-    rotate: 1turn;
-  }
-}
-@keyframes orbit1 {
-  0% {
-    scale: 1;
-  }
-  100% {
-    scale: 1.1;
-  }
-}
-
-.circle img {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
-  animation: orbit 25s linear reverse infinite 0.5s;
-  transition: all 0.5s ease-in-out;
-}
 
 .Hero .logo-img {
   border-radius: 0.4rem;
@@ -398,8 +297,24 @@ header {
 }
 
 /* ABOUT SECTION */
-.About {
+.About, .team, .Events {
+  /* md:px-52 px-5 py-4 text-center min-h-[80vh] flex flex-col justify-center items-center */
   background-color: transparent;
+  min-height: 60vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 13rem;
+
+}
+
+@media screen and (max-width: 990px) {
+  .About, .team, .Events {
+    padding: 1rem;
+    margin-block: 2rem;
+  }
 }
 
 .about-btn {
@@ -414,15 +329,10 @@ header {
   background-color: var(--dsc-logo-red);
 }
 
-.about-wave {
-  fill: var(--about-bg);
-}
-
 /* TEAM SECTION */
 .team {
   background-color: transparent;
 }
-
 
 .overlay {
   position: absolute;
@@ -433,11 +343,11 @@ header {
   z-index: 0;
 }
 
-.Team .about-btn {
+.TeamPage .about-btn {
   background-color: var(--dsc-logo-green);
 }
 
-.Team .team-header {
+.TeamPage .team-header {
   background-image: url(./Images/event/team.jpeg);
   background-size:     cover;                      /* <------ */
   background-repeat:   no-repeat;
@@ -445,7 +355,7 @@ header {
 }
 
 @media screen and (max-width : 990px) {
-  .Team .team-header {
+  .TeamPage .team-header {
     background-position: center center;
   }
 }
@@ -653,9 +563,9 @@ header {
 
 /* ABOUT SECTION */
 .que {
-  background-color: var(--accordian-bg);
-  border: 1px solid black;
-  border-radius: 0.3rem;
+  /* background-color: var(--accordian-bg); */
+  border-bottom: 1px solid black;
+  border-radius: 0;
 }
 
 /* FOOTER SECTION */
