--- a/src/Pages/figma-lifestyle/figmaEvent.css
+++ b/src/Pages/figma-lifestyle/figmaEvent.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
+
+
 :root {
   --figma-red: #ff3b00;
   --figma-pink: #ff7667;
@@ -29,22 +31,41 @@ section {
 section h2 {
   font-size: 3.6rem;
   text-align: center;
+  font-weight: bold;
 }
 
 section h3 {
   font-size: 2rem;
   text-align: center;
+  font-weight: bold;
 }
+
+video {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+  }
 
 @media screen and (max-width: 768px) {
   section {
     padding-inline: 1rem;
   }
+  video {
+    /*     position: absolute; */
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 /* END GENERAL */
 
 /* HEADER SECTION */
+.figmaEvent header {
+  background-color: #000;
+}
+
 .figmaEvent .navB {
   position: fixed;
   top: 1%;
@@ -161,7 +182,9 @@ section h3 {
   text-align: center;
   align-self: center;
   padding-inline: 3rem;
-  margin-bottom: 5rem;
+  padding-bottom: 3rem;
+  /* margin-bottom: 5rem; */
+
 }
 
 .hero-l .hero-title {
@@ -281,6 +304,7 @@ section h3 {
   .figmaEvent .event-hero .hero-l {
     order: 2;
     padding-inline: 2rem;
+    margin-block: 1rem;
   }
 
   .hero-title .gdsc {
@@ -306,19 +330,30 @@ section h3 {
 /* END SPONSORS */
 
 /* ABOUT SECTION */
+.event-about, .speakers, .event-schedule {
+  margin-block: 2rem;
+}
 
 .event-about {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  border: 2px solid var(--figma-green);
+  border: 2px solid var(--figma-red);
   border-radius: 0.4rem;
   margin-inline: 0.5rem;
   background-color: #000;
 }
 
+.event-about h2 {
+  color: var(--figma-pink);
+}
+
 .abt-l,
 .abt-r {
   place-self: center;
+}
+
+.abt-l {
+  padding-inline: 2rem;
 }
 
 .abt-l h2 {
@@ -346,6 +381,7 @@ section h3 {
   .event-about {
     display: flex;
     flex-direction: column;
+    padding-inline: 0.6rem;
   }
 }
 
@@ -356,7 +392,15 @@ section h3 {
 .speakers {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  min-height: 100vh;
+  border: 2px solid var(--figma-purple);
+  border-radius: 0.4rem;
+  margin-inline: 0.5rem;
+  background-color: #000;
+  /* min-height: 100vh; */
+}
+
+.speakers h2 {
+  color: var(--figma-purple);
 }
 
 .spkrs-l,
@@ -368,12 +412,13 @@ section h3 {
   font-size: 3.6rem;
 }
 
-.card {
+/* .card {
   width: 40%;
+  max-width: 300px;
   border-radius: 0.4rem;
   overflow: hidden;
   aspect-ratio: 3/4;
-  /* box-shadow: 1px 2px 8px 0 rgba(246, 245, 245, 0.786); */
+  box-shadow: 1px 2px 8px 0 rgba(246, 245, 245, 0.786);
 }
 
 .card img {
@@ -425,16 +470,70 @@ section h3 {
 
 .card:hover .card-info {
   bottom: 0;
+} */
+
+.card {
+	background-color: #dcdcdc;
+	border-radius: 5px;
+	box-shadow: 0px 10px 20px -10px rgba(0,0,0,0.75);
+	color: #000000;
+	padding-block: 30px;
+	position: relative;
+	width: 350px;
+	max-width: 98%;
+	text-align: center;
+  border: 3px solid var(--figma-purple);
 }
 
-@media (hover: none) {
-  .card img {
-    scale: 1;
-  }
-  .card .card-info {
-    bottom: 0;
-    padding-block: 1rem;
-  }
+
+.card .round {
+  height: 120px;
+  aspect-ratio: 1/1;
+	border: 2px solid var(--figma-purple);
+	border-radius: 50%;
+	padding: 7px;
+  margin-inline: auto;
+}
+
+.card a.primary {
+  display: inline-block;
+	background-color: var(--figma-purple);
+	border: 1px solid var(--figma-purple);
+	border-radius: 3px;
+	color: #fbfbfb;
+  font-weight: bold;
+	/* font-family: Montserrat, sans-serif; */
+	/* font-weight: 500; */
+	padding: 10px 25px;
+  margin-inline: 0.5rem;
+  margin-top: 0.8rem;
+}
+
+.card a.primary.ghost {
+	background-color: transparent;
+	color: var(--figma-purple);
+}
+
+.skills {
+	background-color: #1F1A36;
+	text-align: left;
+	padding: 15px;
+	margin-top: 30px;
+}
+
+.skills ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.skills ul li {
+	border: 1px solid #2D2747;
+	border-radius: 2px;
+	display: inline-block;
+	font-size: 12px;
+	margin: 0 7px 7px 0;
+	padding: 7px;
 }
 
 @media screen and (max-width: 990px) {
@@ -450,10 +549,6 @@ section h3 {
 
   .spkrs-r {
     order: 1;
-  }
-
-  .card {
-    width: 70%;
   }
 }
 
@@ -477,7 +572,51 @@ section h3 {
 
 /* END SPEAKERS */
 
+/* ORGANIZERS SECTION */
+
+.event-organizers {
+  border: 2px solid var(--figma-blue);
+  border-radius: 0.4rem;
+  margin-inline: 0.5rem;
+  background-color: #000;
+}
+
+.event-organizers h2, .event-organizers h3 {
+  color: var(--figma-blue);
+}
+
+.event-organizers .card-container {
+  margin-block: 2rem;
+}
+
+.organizers .card-container .card h3{
+  color: #000;
+  font-size: 1.5rem;
+}
+
+.event-organizers .card, .event-organizers .card .round, .event-organizers a.primary {
+  border-color: var(--figma-blue);
+}
+
+.event-organizers a.primary {
+  background-color: var(--figma-blue);
+}
+
+
+/* END ORGANIZERS */
+
 /* SCHEDULE SECTION */
+
+.event-schedule {
+  border: 2px solid var(--figma-green);
+  border-radius: 0.4rem;
+  margin-inline: 0.5rem;
+  background-color: #000;
+}
+
+.event-schedule h2 {
+  color: var(--figma-green);
+}
 
 .timeline {
   padding: 2rem;
@@ -495,7 +634,7 @@ section h3 {
   height: fit-content;
   width: 25%;
   min-width: 300px;
-  border: 2px solid var(--figma-purple);
+  border: 4px solid var(--figma-purple);
   border-radius: 0.4rem;
   
   display: grid;
@@ -505,7 +644,7 @@ section h3 {
 .timeline-item::after {
   content: "";
   /* border: 2px solid black; */
-  border-top: 2px solid var(--figma-red);
+  border-top: 4px solid var(--figma-red);
   border-radius: 0.4rem;
   width: 300%;
   height: 100px;
@@ -515,14 +654,65 @@ section h3 {
   z-index: -2;
 }
 
+.timeline .flex:nth-child(1) .timeline-item {
+  border-color: var(--figma-red);
+}
+.timeline .flex:nth-child(1) .timeline-item::after {
+  border-color: var(--figma-red);
+}
+.timeline .flex:nth-child(1) .time {
+  background-color: var(--figma-red);
+  color: #fff;
+}
+
+.timeline .flex:nth-child(2) .timeline-item {
+  border-color: var(--figma-pink);
+}
+.timeline .flex:nth-child(2) .timeline-item::after {
+  border-color: var(--figma-pink);
+}
+.timeline .flex:nth-child(2) .time {
+  background-color: var(--figma-pink);
+  color: #fff;
+}
+
+.timeline .flex:nth-child(3) .timeline-item {
+  border-color: var(--figma-purple);
+}
+.timeline .flex:nth-child(3) .timeline-item::after {
+  border-color: var(--figma-purple);
+}
+.timeline .flex:nth-child(3) .time {
+  background-color: var(--figma-purple);
+  color: #fff;
+}
+
+.timeline .flex:nth-child(4) .timeline-item {
+  border-color: var(--figma-blue);
+}
+.timeline .flex:nth-child(4) .timeline-item::after {
+  border-color: var(--figma-blue);
+}
+.timeline .flex:nth-child(4) .time {
+  background-color: var(--figma-blue);
+  color: #fff;
+}
+.timeline .flex:nth-child(5) .timeline-item {
+  border-color: var(--figma-green);
+}
+.timeline .flex:nth-child(5) .time {
+  background-color: var(--figma-green);
+  color: #fff;
+}
+
 .timeline-item-2::after {
   left: auto;
   right: 50%;
-  border-left: 2px solid var(--figma-red);
+  border-left: 4px solid var(--figma-red);
 }
 
 .timeline-item-1::after {
-  border-right: 2px solid var(--figma-red);
+  border-right: 4px solid var(--figma-red);
 }
 
 @media screen and (max-width: 1200px) {
@@ -539,7 +729,7 @@ section h3 {
 @media screen and (max-width: 990px) {
   .timeline .flex {
     justify-content: center;
-    margin-block: 2rem;
+    margin-block: 1rem;
   }
   .timeline .flex:nth-child(even) {
     justify-content: center;
