Major changes and organised the code

--- a/src/App.css
+++ b/src/App.css
@@ -542,7 +542,7 @@ header {
 .mcard {
   position: relative;
 
-  max-width: 90%;
+  max-width: 350px;
   min-height: 300px;
   height: fit-content;
   aspect-ratio: 4/3;
@@ -586,6 +586,7 @@ header {
   transform: scaleX(0);
 }
 .mcard div {
+  max-width: 90%;
   position: relative;
   z-index: 20;
 }
@@ -677,6 +678,20 @@ header {
   .EventsPage .team-header {
     background-position: center top;
   }
+}
+
+.ongoing-events .mcard {
+  min-height: 600px;
+}
+
+.ongoing-events .about-btn {
+  background-color: var(--dsc-logo-red);
+}
+
+.ongoing-events .about-btn:nth-child(2){
+  background-color: transparent;
+  color: var(--default-font-color);
+  border: 2px solid var(--dsc-logo-red);
 }
 
 /* END EVENTSPAGE */
